Squashed merge from 1.2.4+ambition

--- a/tox.ini
+++ b/tox.ini
@@ -1,48 +1,52 @@
 [tox]
-envlist = py35, py36, py37, py38, lint
+envlist = py37, py38, py39, lint
 
 [testenv]
-deps =
-# Mandatory until botocore removes this requirement
-  python-dateutil<2.8.1
+deps = -rrequirements_test.txt
+passenv =
+    REDIS_HOST
+    REDIS_PORT
+    POSTGRES_USER
+    POSTGRES_PASSWORD
+    POSTGRES_HOST
+    POSTGRES_PORT
+    POSTGRES_DB
+    MYSQL_USER
+    MYSQL_PASSWORD
+    MYSQL_HOST
+    MYSQL_PORT
+    MYSQL_DB
+    LDAP_HOST
 setenv =
   BOTO_CONFIG = /nowhere
-extras =
-    test
+extras = all_plugins
 commands =
-    {envpython} setup.py nosetests --verbosity=2
-
-[testenv:py36]
-deps =
-    {[testenv]deps}
-    coverage
-commands =
-    coverage run --source=pypicloud --branch setup.py nosetests --verbosity=2
+    coverage run --source=pypicloud --branch setup.py nosetests --no-skip
 
 [testenv:lint]
-extras =
-    {[testenv]extras}
-    lint
+deps = -rrequirements_lint.txt
 ignore_errors = true
 commands =
     {envpython} setup.py check --restructuredtext -s
-    black --check pypicloud tests setup.py scripts
-    isort -c -rc pypicloud tests setup.py
+    black --config /dev/null --check pypicloud tests setup.py scripts
+    isort -c pypicloud tests setup.py
     mypy pypicloud
     pylint --rcfile=.pylintrc pypicloud tests
 
-[testenv:coverage]
-deps =
-    {[testenv]deps}
-    coverage
-commands =
-    coverage run --source=pypicloud --branch setup.py nosetests
-    coverage html
-
 [testenv:format]
-extras =
-    {[testenv]extras}
-    lint
+deps = -rrequirements_lint.txt
 commands =
-    isort -y -ac -rc pypicloud tests setup.py scripts
-    black pypicloud tests setup.py scripts
+    isort --atomic pypicloud tests setup.py scripts
+    black --config /dev/null pypicloud tests setup.py scripts
+
+[testenv:coveralls]
+deps =
+    wheel
+    coveralls
+passenv =
+    GITHUB_ACTIONS
+    GITHUB_TOKEN
+    GITHUB_REF
+    GITHUB_HEAD_REF
+commands =
+    coveralls --service=github
