--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,3 +1,3 @@
-include *.rst
+include *.rst requirements_test.txt
 recursive-include pypicloud *.css *.woff *.svg *.ttf *.otf *.eot *.js *.map *.html *.jinja2
 recursive-exclude tests *
